[gd_scene load_steps=15 format=2]

[ext_resource path="res://src/Actors/Player.tscn" type="PackedScene" id=1]
[ext_resource path="res://assets/tiles/TileSet.tres" type="TileSet" id=2]
[ext_resource path="res://src/UserInterface/TouchControl.tscn" type="PackedScene" id=3]
[ext_resource path="res://src/Objects/shop/Shop.tscn" type="PackedScene" id=4]
[ext_resource path="res://src/Levels/Shop/ShopLevel2.gd" type="Script" id=5]
[ext_resource path="res://src/UserInterface/ShoppingList.tscn" type="PackedScene" id=6]
[ext_resource path="res://src/UserInterface/PauseMenu.tscn" type="PackedScene" id=7]
[ext_resource path="res://src/Background/ParallaxBackground.tscn" type="PackedScene" id=8]
[ext_resource path="res://src/Actors/Ninja.tscn" type="PackedScene" id=9]
[ext_resource path="res://src/Platform/MovingPlatform.tscn" type="PackedScene" id=10]
[ext_resource path="res://src/Menu/ScoreMenu.tscn" type="PackedScene" id=11]

[sub_resource type="Animation" id=1]
length = 6.0
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath(".:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( -0.1, 0, 0.2, 2.8, 3.2, 5.7, 6 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1, 1 ),
"update": 0,
"values": [ Vector2( 0, 28.6207 ), Vector2( 0, 0 ), Vector2( 0, 0 ), Vector2( 0, 833 ), Vector2( 0, 833 ), Vector2( 0, 0 ), Vector2( 0, 0 ) ]
}

[sub_resource type="Animation" id=2]
length = 6.0
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath(".:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( -0.1, 3 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Vector2( 0, 0 ), Vector2( -760, 0 ) ]
}

[sub_resource type="Animation" id=3]
length = 6.0
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath(".:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( -0.1, 0, 0.2, 2.7, 3.1, 5.8, 6 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1, 1 ),
"update": 0,
"values": [ Vector2( 0, 0 ), Vector2( 0, 0 ), Vector2( 0, 0 ), Vector2( 0, 700 ), Vector2( 0, 700 ), Vector2( 0, 0 ), Vector2( 0, 0 ) ]
}

[node name="ShopLevel2" type="Node2D"]
position = Vector2( -1, -1 )
script = ExtResource( 5 )
__meta__ = {
"_edit_horizontal_guides_": [ 1088.0, 1088.0, -1025.0, 900.594, -320.921 ],
"_edit_vertical_guides_": [ 1920.0, 4341.27 ]
}

[node name="InterfaceLayer" type="CanvasLayer" parent="."]

[node name="ShoppingList" parent="InterfaceLayer" instance=ExtResource( 6 )]

[node name="Control" parent="InterfaceLayer" instance=ExtResource( 3 )]
margin_left = -8.0
margin_right = -8.0

[node name="PauseMenu" parent="InterfaceLayer" instance=ExtResource( 7 )]

[node name="ScoreMenu" parent="InterfaceLayer" instance=ExtResource( 11 )]
menu_screen = "res://src/Menu/LevelMenu/LevelMenu.tscn"

[node name="TileMap" type="TileMap" parent="."]
scale = Vector2( 0.5, 0.5 )
tile_set = ExtResource( 2 )
cell_size = Vector2( 128, 128 )
collision_layer = 2
collision_mask = 0
format = 1
tile_data = PoolIntArray( -1900546, 0, 7, -1900545, 0, 196612, -1966080, 0, 8, -1835010, 0, 131076, -1835009, 0, 131078, -1900544, 0, 131077, -1769474, 0, 131076, -1769473, 0, 131078, -1835008, 0, 131077, -1703938, 0, 131076, -1703937, 0, 131078, -1769472, 0, 131077, -1638402, 0, 131076, -1638401, 0, 131078, -1703936, 0, 131077, -1572866, 0, 131076, -1572865, 0, 131078, -1638400, 0, 131077, -1507330, 0, 131076, -1507329, 0, 131078, -1572864, 0, 131077, -1441794, 0, 131076, -1441793, 0, 131078, -1507328, 0, 131077, -1376258, 0, 131076, -1376257, 0, 131078, -1441792, 0, 131077, -1310722, 0, 131076, -1310721, 0, 131078, -1376256, 0, 131077, -1245186, 0, 131076, -1245185, 0, 131078, -1310720, 0, 131077, -1179650, 0, 131076, -1179649, 0, 131078, -1245184, 0, 131077, -1114114, 0, 131076, -1114113, 0, 131078, -1179648, 0, 131077, -1048578, 0, 131076, -1048577, 0, 131078, -1114112, 0, 131077, -983042, 0, 131076, -983041, 0, 131078, -1048576, 0, 131077, -1048572, 0, 65542, -1048571, 0, 2, -1048570, 0, 2, -1048569, 0, 2, -1048568, 0, 262148, -1048567, 0, 196612, -1048566, 0, 196612, -1048565, 0, 196612, -1048564, 0, 196612, -1048563, 0, 8, -917506, 0, 131076, -917505, 0, 131078, -983040, 0, 131077, -983032, 0, 65543, -983031, 0, 131073, -983030, 0, 131078, -983029, 0, 131078, -983028, 0, 131078, -983027, 0, 196608, -983026, 0, 8, -983020, 0, 7, -983019, 0, 196612, -983018, 0, 196612, -983017, 0, 196612, -983016, 0, 196612, -983015, 0, 262149, -983014, 0, 2, -983013, 0, 2, -983012, 0, 2, -983011, 0, 2, -983010, 0, 2, -983009, 0, 2, -983008, 0, 2, -983007, 0, 2, -983006, 0, 2, -983005, 0, 2, -983004, 0, 2, -983003, 0, 2, -983002, 0, 2, -983001, 0, 2, -983000, 0, 2, -982999, 0, 2, -982998, 0, 2, -982997, 0, 5, -851970, 0, 131076, -851969, 0, 131078, -917504, 0, 131077, -917495, 0, 65543, -917494, 0, 131073, -917493, 0, 131078, -917492, 0, 131078, -917491, 0, 131078, -917490, 0, 196608, -917489, 0, 8, -917485, 0, 7, -917484, 0, 196609, -917483, 0, 131078, -917482, 0, 131078, -917481, 0, 131078, -917480, 0, 131072, -917479, 0, 65544, -786434, 0, 131076, -786433, 0, 131078, -851968, 0, 131077, -851958, 0, 65543, -851957, 0, 131073, -851956, 0, 131078, -851955, 0, 131078, -851954, 0, 131078, -851953, 0, 196608, -851952, 0, 196612, -851951, 0, 196612, -851950, 0, 196612, -851949, 0, 196609, -851948, 0, 131078, -851947, 0, 131072, -851946, 0, 196613, -851945, 0, 196613, -851944, 0, 65544, -720898, 0, 131076, -720897, 0, 131078, -786432, 0, 131077, -786421, 0, 131076, -786420, 0, 131078, -786419, 0, 131078, -786418, 0, 131078, -786417, 0, 131078, -786416, 0, 131078, -786415, 0, 131078, -786414, 0, 131078, -786413, 0, 131078, -786412, 0, 131072, -786411, 0, 65544, -655362, 0, 131076, -655361, 0, 131078, -720896, 0, 131077, -720885, 0, 131076, -720884, 0, 131078, -720883, 0, 131078, -720882, 0, 131078, -720881, 0, 131078, -720880, 0, 131078, -720879, 0, 131078, -720878, 0, 131078, -720877, 0, 131072, -720876, 0, 65544, -589826, 0, 131076, -589825, 0, 131078, -655360, 0, 131077, -655349, 0, 65543, -655348, 0, 131073, -655347, 0, 131078, -655346, 0, 131078, -655345, 0, 131078, -655344, 0, 131078, -655343, 0, 131078, -655342, 0, 131078, -655341, 0, 131077, -524290, 0, 131076, -524289, 0, 131078, -589824, 0, 131077, -589812, 0, 65543, -589811, 0, 196613, -589810, 0, 196613, -589809, 0, 131073, -589808, 0, 131078, -589807, 0, 131078, -589806, 0, 131072, -589805, 0, 65544, -589782, 0, 7, -589781, 0, 8, -458754, 0, 131076, -458753, 0, 131078, -524288, 0, 131077, -524273, 0, 65543, -524272, 0, 196613, -524271, 0, 196613, -524270, 0, 65544, -524246, 0, 131076, -524245, 0, 131077, -393218, 0, 131076, -393217, 0, 131078, -458752, 0, 131077, -458710, 0, 131076, -458709, 0, 131077, -327682, 0, 131076, -327681, 0, 131078, -393216, 0, 131077, -393174, 0, 131076, -393173, 0, 131077, -262146, 0, 131076, -262145, 0, 131078, -327680, 0, 131077, -327638, 1, 131076, -327637, 1, 131077, -327583, 0, 7, -327582, 0, 196612, -327581, 0, 8, -196610, 0, 131076, -196609, 0, 131078, -262144, 0, 131077, -262131, 0, 65541, -262125, 0, 65541, -262102, 1, 131076, -262101, 1, 131077, -262047, 0, 131076, -262046, 0, 131078, -262045, 0, 131077, -131074, 0, 131076, -131073, 0, 131078, -196608, 0, 196608, -196607, 0, 196612, -196606, 0, 196612, -196605, 0, 196612, -196604, 0, 196612, -196603, 0, 196612, -196602, 0, 196612, -196601, 0, 196612, -196600, 0, 196612, -196599, 0, 196612, -196598, 0, 196612, -196597, 0, 196612, -196596, 0, 196612, -196595, 0, 131075, -196594, 0, 196612, -196593, 0, 196612, -196592, 0, 196612, -196591, 0, 196612, -196590, 0, 196612, -196589, 0, 131075, -196588, 0, 196612, -196587, 0, 196612, -196586, 0, 196612, -196585, 0, 196612, -196584, 0, 196612, -196583, 0, 196612, -196582, 0, 196612, -196581, 0, 196612, -196580, 0, 196612, -196579, 0, 8, -196573, 0, 7, -196572, 0, 196612, -196571, 0, 8, -196566, 1, 131076, -196565, 1, 131077, -196511, 0, 131076, -196510, 0, 131078, -196509, 0, 131077, -65538, 0, 131076, -65537, 0, 131078, -131072, 0, 131078, -131071, 0, 131078, -131070, 0, 131078, -131069, 0, 131078, -131068, 0, 131078, -131067, 0, 131078, -131066, 0, 131078, -131065, 0, 131078, -131064, 0, 131078, -131063, 0, 131078, -131062, 0, 131078, -131061, 0, 131078, -131060, 0, 131078, -131059, 0, 131078, -131058, 0, 131078, -131057, 0, 131078, -131056, 0, 131078, -131055, 0, 131078, -131054, 0, 131078, -131053, 0, 131078, -131052, 0, 131078, -131051, 0, 131078, -131050, 0, 131078, -131049, 0, 131078, -131048, 0, 131078, -131047, 0, 131078, -131046, 0, 131078, -131045, 0, 131078, -131044, 0, 131078, -131043, 0, 131077, -131037, 0, 65543, -131036, 0, 196613, -131035, 0, 65544, -131030, 0, 131076, -131029, 0, 131077, -130975, 0, 131076, -130974, 0, 131078, -130973, 0, 131077, -130940, 1, 0, -2, 0, 131076, -1, 0, 131078, -65536, 0, 131072, -65535, 0, 196613, -65534, 0, 196613, -65533, 0, 196613, -65532, 0, 196613, -65531, 0, 196613, -65530, 0, 196613, -65529, 0, 196613, -65528, 0, 196613, -65527, 0, 196613, -65526, 0, 196613, -65525, 0, 196613, -65524, 0, 196613, -65523, 0, 196613, -65522, 0, 196613, -65521, 0, 196613, -65520, 0, 196613, -65519, 0, 196613, -65518, 0, 196613, -65517, 0, 196613, -65516, 0, 196613, -65515, 0, 196613, -65514, 0, 196613, -65513, 0, 196613, -65512, 0, 196613, -65511, 0, 196613, -65510, 0, 196613, -65509, 0, 196613, -65508, 0, 196613, -65507, 0, 65544, -65496, 0, 7, -65495, 0, 196612, -65494, 0, 196609, -65493, 0, 131077, -65439, 0, 131076, -65438, 0, 131078, -65437, 0, 131077, 65534, 0, 131076, 65535, 0, 131078, 0, 0, 131077, 40, 0, 131076, 41, 0, 131078, 42, 0, 131078, 43, 0, 131077, 97, 0, 131076, 98, 0, 131078, 99, 0, 131077, 131070, 0, 131076, 131071, 0, 131078, 65536, 0, 131077, 65576, 0, 131076, 65577, 0, 131078, 65578, 0, 131078, 65579, 0, 131077, 65633, 0, 131076, 65634, 0, 131078, 65635, 0, 131077, 196606, 0, 131076, 196607, 0, 131078, 131072, 0, 131077, 131110, 0, 7, 131111, 0, 196612, 131112, 0, 196609, 131113, 0, 131078, 131114, 0, 131078, 131115, 0, 131077, 131169, 0, 131076, 131170, 0, 131078, 131171, 0, 131077, 262142, 0, 131076, 262143, 0, 131078, 196608, 0, 131077, 196646, 0, 131076, 196647, 0, 131078, 196648, 0, 131078, 196649, 0, 131078, 196650, 0, 131078, 196651, 0, 131077, 196705, 0, 131076, 196706, 0, 131078, 196707, 0, 131077, 327678, 0, 131076, 327679, 0, 131078, 262144, 0, 131077, 262182, 0, 131076, 262183, 0, 131078, 262184, 0, 131078, 262185, 0, 131078, 262186, 0, 131078, 262187, 0, 131077, 262241, 0, 131076, 262242, 0, 131078, 262243, 0, 131077, 393214, 0, 131076, 393215, 0, 131078, 327680, 0, 131077, 327713, 0, 7, 327714, 0, 196612, 327715, 0, 196612, 327716, 0, 196612, 327717, 0, 196612, 327718, 0, 196609, 327719, 0, 131078, 327720, 0, 131078, 327721, 0, 131078, 327722, 0, 131078, 327723, 0, 131077, 327764, 0, 7, 327765, 0, 196612, 327766, 0, 196612, 327767, 0, 196612, 327768, 0, 196612, 327769, 0, 196612, 327770, 0, 196612, 327771, 0, 196612, 327772, 0, 8, 327777, 0, 131076, 327778, 0, 131078, 327779, 0, 131077, 458750, 0, 131076, 458751, 0, 131078, 393216, 0, 131077, 393249, 0, 65543, 393250, 0, 196613, 393251, 0, 196613, 393252, 0, 196613, 393253, 0, 196613, 393254, 0, 196613, 393255, 0, 196613, 393256, 0, 196613, 393257, 0, 196613, 393258, 0, 196613, 393259, 0, 65544, 393299, 0, 65542, 393300, 0, 327684, 393301, 0, 196613, 393302, 0, 196613, 393303, 0, 196613, 393304, 0, 196613, 393305, 0, 196613, 393306, 0, 196613, 393307, 0, 196613, 393308, 0, 65544, 393313, 0, 131076, 393314, 0, 131078, 393315, 0, 131077, 524286, 0, 131076, 524287, 0, 131078, 458752, 0, 131077, 458807, 0, 7, 458808, 0, 8, 458849, 0, 131076, 458850, 0, 131078, 458851, 0, 131077, 589822, 0, 131076, 589823, 0, 131078, 524288, 0, 131077, 524343, 0, 131076, 524344, 0, 196608, 524345, 0, 196612, 524346, 0, 196612, 524347, 0, 196612, 524348, 0, 196612, 524349, 0, 196612, 524350, 0, 196612, 524351, 0, 196612, 524352, 0, 196612, 524353, 0, 196612, 524354, 0, 196612, 524355, 0, 8, 524383, 0, 7, 524384, 0, 196612, 524385, 0, 196609, 524386, 0, 131078, 524387, 0, 131077, 655358, 0, 131076, 655359, 0, 131078, 589824, 0, 131077, 589879, 0, 65543, 589880, 0, 196613, 589881, 0, 196613, 589882, 0, 196613, 589883, 0, 196613, 589884, 0, 196613, 589885, 0, 196613, 589886, 0, 196613, 589887, 0, 196613, 589888, 0, 196613, 589889, 0, 196613, 589890, 0, 196613, 589891, 0, 65544, 589919, 0, 131076, 589920, 0, 131078, 589921, 0, 131078, 589922, 0, 131078, 589923, 0, 131077, 720894, 0, 131076, 720895, 0, 131078, 655360, 0, 131077, 655454, 0, 7, 655455, 0, 196609, 655456, 0, 131078, 655457, 0, 131078, 655458, 0, 131078, 655459, 0, 131077, 786430, 0, 131076, 786431, 0, 131078, 720896, 0, 131077, 720987, 0, 7, 720988, 0, 196612, 720989, 0, 196612, 720990, 0, 196609, 720991, 0, 131078, 720992, 0, 131078, 720993, 0, 131078, 720994, 0, 131078, 720995, 0, 131077, 851966, 0, 131076, 851967, 0, 131078, 786432, 0, 131077, 786523, 0, 131076, 786524, 0, 131078, 786525, 0, 131078, 786526, 0, 131078, 786527, 0, 131078, 786528, 0, 131078, 786529, 0, 131078, 786530, 0, 131078, 786531, 0, 131077, 917502, 0, 131076, 917503, 0, 131078, 851968, 0, 131077, 852031, 0, 7, 852032, 0, 196612, 852033, 0, 196612, 852034, 0, 196612, 852035, 0, 8, 852044, 0, 7, 852045, 0, 196612, 852046, 0, 196612, 852047, 0, 196612, 852048, 0, 8, 852057, 0, 7, 852058, 0, 196612, 852059, 0, 196609, 852060, 0, 131078, 852061, 0, 131078, 852062, 0, 131078, 852063, 0, 131078, 852064, 0, 131078, 852065, 0, 131078, 852066, 0, 131078, 852067, 0, 131077, 983038, 0, 131076, 983039, 0, 131078, 917504, 0, 196608, 917505, 0, 196612, 917506, 0, 196612, 917507, 0, 196612, 917508, 0, 196612, 917509, 0, 196612, 917510, 0, 196612, 917511, 0, 196612, 917512, 0, 196612, 917513, 0, 196612, 917514, 0, 196612, 917515, 0, 196612, 917516, 0, 196612, 917517, 0, 196612, 917518, 0, 196612, 917519, 0, 196612, 917520, 0, 196612, 917521, 0, 196612, 917522, 0, 196612, 917523, 0, 196612, 917524, 0, 196612, 917525, 0, 196612, 917526, 0, 196612, 917527, 0, 196612, 917528, 0, 196612, 917529, 0, 196612, 917530, 0, 196612, 917531, 0, 196612, 917532, 0, 196612, 917533, 0, 8, 917537, 0, 7, 917538, 0, 196612, 917539, 0, 196612, 917540, 0, 196612, 917541, 0, 196612, 917542, 0, 196612, 917543, 0, 196612, 917544, 0, 196612, 917545, 0, 196612, 917546, 0, 196612, 917547, 0, 196612, 917548, 0, 196612, 917549, 0, 196612, 917550, 0, 196612, 917551, 0, 196612, 917552, 0, 196612, 917553, 0, 196612, 917554, 0, 196612, 917555, 0, 196612, 917556, 0, 196612, 917557, 0, 196612, 917558, 0, 196612, 917559, 0, 196612, 917560, 0, 196612, 917561, 0, 196612, 917562, 0, 196612, 917563, 0, 196612, 917564, 0, 196612, 917565, 0, 196612, 917566, 0, 196612, 917567, 0, 196609, 917568, 0, 131078, 917569, 0, 131078, 917570, 0, 131078, 917571, 0, 196608, 917572, 0, 196612, 917573, 0, 196612, 917574, 0, 196612, 917575, 0, 196612, 917576, 0, 196612, 917577, 0, 196612, 917578, 0, 196612, 917579, 0, 196612, 917580, 0, 196609, 917581, 0, 131078, 917582, 0, 131078, 917583, 0, 131078, 917584, 0, 196608, 917585, 0, 196612, 917586, 0, 196612, 917587, 0, 196612, 917588, 0, 196612, 917589, 0, 196612, 917590, 0, 196612, 917591, 0, 196612, 917592, 0, 196612, 917593, 0, 196609, 917594, 0, 131078, 917595, 0, 131078, 917596, 0, 131078, 917597, 0, 131078, 917598, 0, 131078, 917599, 0, 131078, 917600, 0, 131078, 917601, 0, 131078, 917602, 0, 131078, 917603, 0, 131077, 1048574, 0, 131076, 1048575, 0, 131078, 983040, 0, 131078, 983041, 0, 131078, 983042, 0, 131078, 983043, 0, 131078, 983044, 0, 131078, 983045, 0, 131078, 983046, 0, 131078, 983047, 0, 131078, 983048, 0, 131078, 983049, 0, 131078, 983050, 0, 131078, 983051, 0, 131078, 983052, 0, 131078, 983053, 0, 131078, 983054, 0, 131078, 983055, 0, 131078, 983056, 0, 131078, 983057, 0, 131078, 983058, 0, 131078, 983059, 0, 131078, 983060, 0, 131078, 983061, 0, 131078, 983062, 0, 131078, 983063, 0, 131078, 983064, 0, 131078, 983065, 0, 131078, 983066, 0, 131078, 983067, 0, 131078, 983068, 0, 131078, 983069, 0, 131077, 983073, 0, 131076, 983074, 0, 131078, 983075, 0, 131078, 983076, 0, 131078, 983077, 0, 131078, 983078, 0, 131078, 983079, 0, 131078, 983080, 0, 131078, 983081, 0, 131078, 983082, 0, 131078, 983083, 0, 131078, 983084, 0, 131078, 983085, 0, 131078, 983086, 0, 131078, 983087, 0, 131078, 983088, 0, 131078, 983089, 0, 131078, 983090, 0, 131078, 983091, 0, 131078, 983092, 0, 131078, 983093, 0, 131078, 983094, 0, 131078, 983095, 0, 131078, 983096, 0, 131078, 983097, 0, 131078, 983098, 0, 131078, 983099, 0, 131078, 983100, 0, 131078, 983101, 0, 131078, 983102, 0, 131078, 983103, 0, 131078, 983104, 0, 131078, 983105, 0, 131078, 983106, 0, 131078, 983107, 0, 131078, 983108, 0, 131078, 983109, 0, 131078, 983110, 0, 131078, 983111, 0, 131078, 983112, 0, 131078, 983113, 0, 131078, 983114, 0, 131078, 983115, 0, 131078, 983116, 0, 131078, 983117, 0, 131078, 983118, 0, 131078, 983119, 0, 131078, 983120, 0, 131078, 983121, 0, 131078, 983122, 0, 131078, 983123, 0, 131078, 983124, 0, 131078, 983125, 0, 131078, 983126, 0, 131078, 983127, 0, 131078, 983128, 0, 131078, 983129, 0, 131078, 983130, 0, 131078, 983131, 0, 131078, 983132, 0, 131078, 983133, 0, 131078, 983134, 0, 131078, 983135, 0, 131078, 983136, 0, 131078, 983137, 0, 131078, 983138, 0, 131078, 983139, 0, 131077, 1114110, 0, 65543, 1114111, 0, 196613, 1048576, 0, 196613, 1048577, 0, 196613, 1048578, 0, 196613, 1048579, 0, 196613, 1048580, 0, 196613, 1048581, 0, 196613, 1048582, 0, 196613, 1048583, 0, 196613, 1048584, 0, 196613, 1048585, 0, 196613, 1048586, 0, 196613, 1048587, 0, 196613, 1048588, 0, 196613, 1048589, 0, 196613, 1048590, 0, 196613, 1048591, 0, 196613, 1048592, 0, 196613, 1048593, 0, 196613, 1048594, 0, 196613, 1048595, 0, 196613, 1048596, 0, 196613, 1048597, 0, 196613, 1048598, 0, 196613, 1048599, 0, 196613, 1048600, 0, 196613, 1048601, 0, 196613, 1048602, 0, 196613, 1048603, 0, 196613, 1048604, 0, 196613, 1048605, 0, 327685, 1048606, 0, 2, 1048607, 0, 2, 1048608, 0, 2, 1048609, 0, 327684, 1048610, 0, 196613, 1048611, 0, 196613, 1048612, 0, 196613, 1048613, 0, 196613, 1048614, 0, 196613, 1048615, 0, 196613, 1048616, 0, 196613, 1048617, 0, 196613, 1048618, 0, 196613, 1048619, 0, 196613, 1048620, 0, 196613, 1048621, 0, 196613, 1048622, 0, 196613, 1048623, 0, 196613, 1048624, 0, 196613, 1048625, 0, 196613, 1048626, 0, 196613, 1048627, 0, 196613, 1048628, 0, 196613, 1048629, 0, 196613, 1048630, 0, 196613, 1048631, 0, 196613, 1048632, 0, 196613, 1048633, 0, 196613, 1048634, 0, 196613, 1048635, 0, 196613, 1048636, 0, 196613, 1048637, 0, 196613, 1048638, 0, 196613, 1048639, 0, 196613, 1048640, 0, 196613, 1048641, 0, 196613, 1048642, 0, 196613, 1048643, 0, 196613, 1048644, 0, 196613, 1048645, 0, 196613, 1048646, 0, 196613, 1048647, 0, 196613, 1048648, 0, 196613, 1048649, 0, 196613, 1048650, 0, 196613, 1048651, 0, 196613, 1048652, 0, 196613, 1048653, 0, 196613, 1048654, 0, 196613, 1048655, 0, 196613, 1048656, 0, 196613, 1048657, 0, 196613, 1048658, 0, 196613, 1048659, 0, 196613, 1048660, 0, 196613, 1048661, 0, 196613, 1048662, 0, 196613, 1048663, 0, 196613, 1048664, 0, 196613, 1048665, 0, 196613, 1048666, 0, 196613, 1048667, 0, 196613, 1048668, 0, 196613, 1048669, 0, 196613, 1048670, 0, 196613, 1048671, 0, 196613, 1048672, 0, 196613, 1048673, 0, 196613, 1048674, 0, 196613, 1048675, 0, 65544, 1114244, 1, 0, 1114245, 1, 0, 1114246, 1, 0, 1114247, 1, 0 )

[node name="Player" parent="." instance=ExtResource( 1 )]
position = Vector2( 733.45, 899.611 )
collision_mask = 18
speed = Vector2( 800, 1800 )
gravity = 6000.0

[node name="Camera2D" parent="Player" index="0"]
limit_left = 0
limit_right = 8200
limit_bottom = 1090

[node name="AnimatedSprite" parent="Player" index="2"]
frame = 5

[node name="ParallaxBackground" parent="." instance=ExtResource( 8 )]

[node name="Shop2" parent="." instance=ExtResource( 4 )]
position = Vector2( 321.627, -547.448 )
z_index = -5
collision_layer = 8
collision_mask = 0
list = [ [ "Egg", 10 ], [ "Milk", 150 ], [ "Flour", 100 ], [ "Bread", 200 ], [ "Apple", 25 ] ]

[node name="Shop4" parent="." instance=ExtResource( 4 )]
position = Vector2( 1241.07, 544.41 )
z_index = -5
collision_layer = 8
collision_mask = 0
list = [ [ "Egg", 44 ], [ "Milk", 900 ], [ "Flour", 157 ], [ "Bread", 471 ], [ "Apple", 300 ] ]

[node name="Shop5" parent="." instance=ExtResource( 4 )]
position = Vector2( 3898.81, 155.954 )
z_index = -5
collision_layer = 8
collision_mask = 0
list = [ [ "Egg", 300 ], [ "Milk", 160 ], [ "Flour", 1200 ], [ "Bread", 395 ], [ "Apple", 45 ] ]

[node name="Shop6" parent="." instance=ExtResource( 4 )]
position = Vector2( 5631.71, -31.9988 )
z_index = -5
collision_layer = 8
collision_mask = 0
list = [ [ "Egg", 21 ], [ "Milk", 160 ], [ "Flour", 244 ], [ "Bread", 1500 ], [ "Apple", 30 ] ]

[node name="Ninja" parent="." instance=ExtResource( 9 )]
position = Vector2( 981.432, -190.196 )

[node name="Ninja2" parent="." instance=ExtResource( 9 )]
position = Vector2( 4717.8, 891.918 )

[node name="Ninja3" parent="." instance=ExtResource( 9 )]
position = Vector2( 5277.28, 902.609 )

[node name="MovingPlatformA" parent="." instance=ExtResource( 10 )]

[node name="TileMap" parent="MovingPlatformA" index="0"]
tile_data = PoolIntArray( 327710, 0, 65542, 327711, 0, 2, 327712, 0, 5 )

[node name="MovingPlatform2" parent="." instance=ExtResource( 10 )]

[node name="TileMap" parent="MovingPlatform2" index="0"]
tile_data = PoolIntArray( -982996, 0, 65542, -982995, 0, 2, -982994, 0, 5 )

[node name="AnimationPlayer" parent="MovingPlatform2" index="1"]
anims/default = SubResource( 1 )

[node name="MovingPlatform4" parent="." instance=ExtResource( 10 )]
position = Vector2( -73.5484, 0 )

[node name="TileMap" parent="MovingPlatform4" index="0"]
tile_data = PoolIntArray( 327760, 0, 65542, 327761, 0, 2, 327762, 0, 2, 327763, 0, 5 )

[node name="AnimationPlayer" parent="MovingPlatform4" index="1"]
anims/default = SubResource( 2 )

[node name="MovingPlatform3" parent="." instance=ExtResource( 10 )]
position = Vector2( 0, 48.2758 )

[node name="TileMap" parent="MovingPlatform3" index="0"]
tile_data = PoolIntArray( -1048575, 0, 65542, -1048574, 0, 2, -1048573, 0, 5 )

[node name="AnimationPlayer" parent="MovingPlatform3" index="1"]
anims/default = SubResource( 3 )
[connection signal="Done" from="InterfaceLayer/ShoppingList" to="." method="_on_ShoppingList_Done"]
[connection signal="Bought" from="Shop2" to="." method="_on_Shop_Bought"]
[connection signal="ShopUI" from="Shop2" to="." method="_on_Shop_ShopUI"]
[connection signal="Bought" from="Shop4" to="." method="_on_Shop_Bought"]
[connection signal="ShopUI" from="Shop4" to="." method="_on_Shop_ShopUI"]
[connection signal="Bought" from="Shop5" to="." method="_on_Shop_Bought"]
[connection signal="ShopUI" from="Shop5" to="." method="_on_Shop_ShopUI"]
[connection signal="Bought" from="Shop6" to="." method="_on_Shop_Bought"]
[connection signal="ShopUI" from="Shop6" to="." method="_on_Shop_ShopUI"]
[connection signal="player_hurt" from="Ninja" to="." method="_on_Ninja_player_hurt"]
[connection signal="player_hurt" from="Ninja2" to="." method="_on_Ninja_player_hurt"]
[connection signal="player_hurt" from="Ninja3" to="." method="_on_Ninja_player_hurt"]

[editable path="Player"]

[editable path="MovingPlatformA"]

[editable path="MovingPlatform2"]

[editable path="MovingPlatform4"]

[editable path="MovingPlatform3"]
